[tool.poetry]
name = "leet_code"
version = "0.1.0"
description = "leet code problems"
authors = ["dmaisano <dmaisanooo@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mypy = "mypy --config-file mypy.ini"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
