[tool.poetry]
name = "leet_code"
version = "0.1.0"
description = "leet code problems"
authors = ["dmaisano <dmaisanooo@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mypy = "mypy --config-file mypy.ini"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
pyperclip = "^1.9.0"
inquirer = "^3.4.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240712"
asyncio = "^3.4.3"
playwright = "^1.46.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
